2007-08-24  Ivan N. Zlatev <contact@i-nz.net>

	* System.Design.dll.sources: add MultilineStringEditor.cs.

2006-12-19  Chris Toshok  <toshok@ximian.com>

	* System.Design.dll.sources: add DataSourceConverter.cs and
	DataMemberFieldConverter.

2006-12-06  Chris Toshok  <toshok@ximian.com>

	* System.Design.dll.sources: add
	System.Windows.Forms.Design/ImageCollectionEditor.cs

2006-04-28  Peter Dennis Bartok  <pbartok@novell.com> 

	* System.Design.dll.sources: Put back two accidentally deleted lines

2006-04-28  Peter Dennis Bartok  <pbartok@novell.com>

	* System.Design.dll.sources: Added ControlBindingsConverter.cs

2006-03-10  Raja R Harinath  <rharinath@novell.com>

	* System.ComponentModel.Design.Serialization/CodeDomSerializerException.cs:
	Moved new-ish implementation here from System.dll.

2006-01-22  Chris Toshok  <toshok@ximian.com>

	* System.Design.dll.sources: add in all the stubbed/partially
	implemented stuff.

	* Makefile (LIB_MCS_FLAGS): in the 2.0 case include a reference to
	System.Configuration.dll.

2005-06-15  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Design.dll.sources :
	  remove duplicate MonoTODOAttribute.cs

2004-10-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Design.dll.sources: added files in
	System.Web.UI.Design.WebControls.

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* System.Design.dll.sources: added more stub for classes
	in System.Windows.Forms.Design

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* System.Design.dll.sources: added more stubs for classes
	in System.Diagnostics.Design, System.Messaging.Design and
	System.ServiceProcess.Design

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* Makefile: added reference to System.Data assembly
	* System.Design.dll.sources: added new stubbed classes

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Windows.Forms.Design/IMenuEditorService.cs:
	fixed signature
