@@ -1,3 +1,9 @@
+2007-09-13  Marek Habersack  <mhabersack@novell.com>
+
+	* DummyClass.cs: added to have System.Design present in the
+	assembly. AJAX Control Toolkit references the namespace and it's
+	apparently empty (at least no docs on MSDN).
+
 2003-03-31	Alan Tam <Tam@SiuLung.com>
 
 	* TODOAttribute.cs: Changed namespace
